    Closes: #295607.
  * Add Galician menu sections translation. Thanks Jacobo Tarrio.
    Closes: #295620.
  * Add Traditional Chinese menu sections translation. Thanks Asho Yeh.
    Closes: #295683.
  * Clean up the BUGS file.
  * debian/bug.presubj: display "Reporting menu bugs" in red to stand out.
  * Morten Brix Pedersen: 
    - Fixed two typos in the Danish menu program translation.

 -- Bill Allombert <ballombe@debian.org>  Wed, 16 Feb 2005 23:42:14 +0100

menu (2.1.21) unstable; urgency=low

  * The "time for ugly work-around" release
  * Add Czech menu messages translation. Thanks Miroslav Kure.
    Closes: #287308.
  * debian/control: uncapitalize synopsis.
  * debian/postinst, debian/prerm, debian/rules:
    Divert update-menus by a script that checks if update-menus is executable.
    This is a work-around for broken postrm scripts in woody. Closes: #289702.
    Thanks Adam C Powell IV for noticing them.

 -- Bill Allombert <ballombe@debian.org>  Thu, 20 Jan 2005 17:21:31 +0100

menu (2.1.20) unstable; urgency=low

  * The "deer Rudolf" release
  * Call getpwuid() once and cache the value. This avoid stressing 
    needlessly NIS. Thanks to Steven R. Evatt.
  * Extend the documentation of onlyrunasuser.

 -- Bill Allombert <ballombe@debian.org>  Wed, 15 Dec 2004 00:51:03 +0100

menu (2.1.19) unstable; urgency=low

  * The "Debian translators rule!" release
  * Update Finnish menu section translations, fixing a serious translation
    error noticed by Mika Wahlroos. Closes: #276122.
  * Update Brazillian menu section translation. Thanks André Luís Lopes.
  * Update Russian menu messages translation. Thanks Yuri Kozlov.
    Closes: #268638.
  * Fix Norwegian Nynorsk menu message translation. Thanks Håvard Korsvoll.
  * Update Spanish menu messages translation. Thanks Javier Fernandez-Sanguino
    Peña.
  * Update Chinese menu messages translation. Thanks Carlos Z.F. Liu.
  * Add German menu messages translation. Thanks Tobias Toedter.